src/ashparser/AshParser.ts
// Generated from src/ashparser/AshParser.g4 by ANTLR 4.7.3-SNAPSHOT


import { ATN } from "antlr4ts/atn/ATN";
import { ATNDeserializer } from "antlr4ts/atn/ATNDeserializer";
import { FailedPredicateException } from "antlr4ts/FailedPredicateException";
import { NotNull } from "antlr4ts/Decorators";
import { NoViableAltException } from "antlr4ts/NoViableAltException";
import { Override } from "antlr4ts/Decorators";
import { Parser } from "antlr4ts/Parser";
import { ParserRuleContext } from "antlr4ts/ParserRuleContext";
import { ParserATNSimulator } from "antlr4ts/atn/ParserATNSimulator";
import { ParseTreeListener } from "antlr4ts/tree/ParseTreeListener";
import { ParseTreeVisitor } from "antlr4ts/tree/ParseTreeVisitor";
import { RecognitionException } from "antlr4ts/RecognitionException";
import { RuleContext } from "antlr4ts/RuleContext";
//import { RuleVersion } from "antlr4ts/RuleVersion";
import { TerminalNode } from "antlr4ts/tree/TerminalNode";
import { Token } from "antlr4ts/Token";
import { TokenStream } from "antlr4ts/TokenStream";
import { Vocabulary } from "antlr4ts/Vocabulary";
import { VocabularyImpl } from "antlr4ts/VocabularyImpl";

import * as Utils from "antlr4ts/misc/Utils";

import { AshParserListener } from "./AshParserListener";
import { AshParserVisitor } from "./AshParserVisitor";


export class AshParser extends Parser {
	public static readonly BOOLEAN = 1;
	public static readonly BREAK = 2;
	public static readonly CASE = 3;
	public static readonly CATCH = 4;
	public static readonly CONST = 5;
	public static readonly CONTAINS = 6;
	public static readonly CONTINUE = 7;
	public static readonly DEFAULT = 8;
	public static readonly DO = 9;
	public static readonly DOUBLE = 10;
	public static readonly ELSE = 11;
	public static readonly FINALLY = 12;
	public static readonly FLOAT = 13;
	public static readonly FOR = 14;
	public static readonly FOREACH = 15;
	public static readonly IF = 16;
	public static readonly IMPORT = 17;
	public static readonly IN = 18;
	public static readonly INT = 19;
	public static readonly NOTIFY = 20;
	public static readonly RETURN = 21;
	public static readonly SCRIPT = 22;
	public static readonly SINCE = 23;
	public static readonly STATIC = 24;
	public static readonly STRING = 25;
	public static readonly SWITCH = 26;
	public static readonly THROW = 27;
	public static readonly TRY = 28;
	public static readonly VOID = 29;
	public static readonly WHILE = 30;
	public static readonly DECIMAL_LITERAL = 31;
	public static readonly HEX_LITERAL = 32;
	public static readonly OCT_LITERAL = 33;
	public static readonly BINARY_LITERAL = 34;
	public static readonly FLOAT_LITERAL = 35;
	public static readonly HEX_FLOAT_LITERAL = 36;
	public static readonly BOOL_LITERAL = 37;
	public static readonly STRING_LITERAL = 38;
	public static readonly NULL_LITERAL = 39;
	public static readonly ASH_BOOLEANS_LITERAL = 40;
	public static readonly ASH_BOUNTY_LITERAL = 41;
	public static readonly ASH_CLASS_LITERAL = 42;
	public static readonly ASH_CLASSES_LITERAL = 43;
	public static readonly ASH_COINMASTER_LITERAL = 44;
	public static readonly ASH_EFFECT_LITERAL = 45;
	public static readonly ASH_EFFECTS_LITERAL = 46;
	public static readonly ASH_ELEMENT_LITERAL = 47;
	public static readonly ASH_ELEMENTS_LITERAL = 48;
	public static readonly ASH_FAMILIAR_LITERAL = 49;
	public static readonly ASH_FAMILIARS_LITERAL = 50;
	public static readonly ASH_FLOATS_LITERAL = 51;
	public static readonly ASH_INTS_LITERAL = 52;
	public static readonly ASH_ITEM_LITERAL = 53;
	public static readonly ASH_ITEMS_LITERAL = 54;
	public static readonly ASH_LOCATION_LITERAL = 55;
	public static readonly ASH_LOCATIONS_LITERAL = 56;
	public static readonly ASH_MONSTER_LITERAL = 57;
	public static readonly ASH_MONSTERS_LITERAL = 58;
	public static readonly ASH_PHYLUM_LITERAL = 59;
	public static readonly ASH_SERVANT_LITERAL = 60;
	public static readonly ASH_SKILL_LITERAL = 61;
	public static readonly ASH_SKILLS_LITERAL = 62;
	public static readonly ASH_SLOT_LITERAL = 63;
	public static readonly ASH_SLOTS_LITERAL = 64;
	public static readonly ASH_STAT_LITERAL = 65;
	public static readonly ASH_STATS_LITERAL = 66;
	public static readonly ASH_STRINGS_LITERAL = 67;
	public static readonly ASH_THRALL_LITERAL = 68;
	public static readonly ASH_BOUNTY_TYPE = 69;
	public static readonly ASH_BUFFER_TYPE = 70;
	public static readonly ASH_CLASS_TYPE = 71;
	public static readonly ASH_COINMASTER_TYPE = 72;
	public static readonly ASH_EFFECT_TYPE = 73;
	public static readonly ASH_ELEMENT_TYPE = 74;
	public static readonly ASH_FAMILIAR_TYPE = 75;
	public static readonly ASH_ITEM_TYPE = 76;
	public static readonly ASH_LOCATION_TYPE = 77;
	public static readonly ASH_MATCHER_TYPE = 78;
	public static readonly ASH_MONSTER_TYPE = 79;
	public static readonly ASH_PHYLUM_TYPE = 80;
	public static readonly ASH_SERVANT_TYPE = 81;
	public static readonly ASH_SKILL_TYPE = 82;
	public static readonly ASH_SLOT_TYPE = 83;
	public static readonly ASH_STAT_TYPE = 84;
	public static readonly ASH_THRALL_TYPE = 85;
	public static readonly LPAREN = 86;
	public static readonly RPAREN = 87;
	public static readonly LBRACE = 88;
	public static readonly RBRACE = 89;
	public static readonly LBRACK = 90;
	public static readonly RBRACK = 91;
	public static readonly SEMI = 92;
	public static readonly COMMA = 93;
	public static readonly DOT = 94;
	public static readonly ASSIGN = 95;
	public static readonly GT = 96;
	public static readonly LT = 97;
	public static readonly BANG = 98;
	public static readonly TILDE = 99;
	public static readonly QUESTION = 100;
	public static readonly COLON = 101;
	public static readonly EQUAL = 102;
	public static readonly LE = 103;
	public static readonly GE = 104;
	public static readonly NOTEQUAL = 105;
	public static readonly AND = 106;
	public static readonly OR = 107;
	public static readonly INC = 108;
	public static readonly DEC = 109;
	public static readonly ADD = 110;
	public static readonly SUB = 111;
	public static readonly MUL = 112;
	public static readonly DIV = 113;
	public static readonly BITAND = 114;
	public static readonly BITOR = 115;
	public static readonly CARET = 116;
	public static readonly MOD = 117;
	public static readonly ADD_ASSIGN = 118;
	public static readonly SUB_ASSIGN = 119;
	public static readonly MUL_ASSIGN = 120;
	public static readonly DIV_ASSIGN = 121;
	public static readonly AND_ASSIGN = 122;
	public static readonly OR_ASSIGN = 123;
	public static readonly XOR_ASSIGN = 124;
	public static readonly MOD_ASSIGN = 125;
	public static readonly LSHIFT_ASSIGN = 126;
	public static readonly RSHIFT_ASSIGN = 127;
	public static readonly URSHIFT_ASSIGN = 128;
	public static readonly WS = 129;
	public static readonly COMMENT = 130;
	public static readonly LINE_COMMENT_SLASH = 131;
	public static readonly LINE_COMMENT_POUND = 132;
	public static readonly IDENTIFIER = 133;
	public static readonly RULE_compilationUnit = 0;
	public static readonly RULE_miscAshDeclarations = 1;
	public static readonly RULE_importDeclaration = 2;
	public static readonly RULE_notifyDeclaration = 3;
	public static readonly RULE_scriptDeclaration = 4;
	public static readonly RULE_sinceDeclaration = 5;
	public static readonly RULE_functionDeclaration = 6;
	public static readonly RULE_functionBody = 7;
	public static readonly RULE_typeTypeOrVoid = 8;
	public static readonly RULE_fieldDeclaration = 9;
	public static readonly RULE_constDeclaration = 10;
	public static readonly RULE_constantDeclarator = 11;
	public static readonly RULE_variableDeclarator = 12;
	public static readonly RULE_variableInitializer = 13;
	public static readonly RULE_formalParameters = 14;
	public static readonly RULE_formalParameterList = 15;
	public static readonly RULE_formalParameter = 16;
	public static readonly RULE_literal = 17;
	public static readonly RULE_integerLiteral = 18;
	public static readonly RULE_floatLiteral = 19;
	public static readonly RULE_ashLiteral = 20;
	public static readonly RULE_elementValuePairs = 21;
	public static readonly RULE_elementValuePair = 22;
	public static readonly RULE_elementValue = 23;
	public static readonly RULE_elementValueArrayInitializer = 24;
	public static readonly RULE_defaultValue = 25;
	public static readonly RULE_block = 26;
	public static readonly RULE_blockStatement = 27;
	public static readonly RULE_variableDeclaration = 28;
	public static readonly RULE_statement = 29;
	public static readonly RULE_catchClause = 30;
	public static readonly RULE_catchType = 31;
	public static readonly RULE_finallyBlock = 32;
	public static readonly RULE_switchBlockStatementGroup = 33;
	public static readonly RULE_switchLabel = 34;
	public static readonly RULE_forControl = 35;
	public static readonly RULE_forInit = 36;
	public static readonly RULE_enhancedForControl = 37;
	public static readonly RULE_foreach = 38;
	public static readonly RULE_parExpression = 39;
	public static readonly RULE_expressionList = 40;
	public static readonly RULE_methodCall = 41;
	public static readonly RULE_expression = 42;
	public static readonly RULE_primary = 43;
	public static readonly RULE_typeList = 44;
	public static readonly RULE_typeType = 45;
	public static readonly RULE_primitiveType = 46;
	public static readonly RULE_mapType = 47;
	public static readonly RULE_mapTypeKeys = 48;
	public static readonly RULE_ashType = 49;
	public static readonly RULE_arguments = 50;
	// tslint:disable:no-trailing-whitespace
	public static readonly ruleNames: string[] = [
		"compilationUnit", "miscAshDeclarations", "importDeclaration", "notifyDeclaration", 
		"scriptDeclaration", "sinceDeclaration", "functionDeclaration", "functionBody", 
		"typeTypeOrVoid", "fieldDeclaration", "constDeclaration", "constantDeclarator", 
		"variableDeclarator", "variableInitializer", "formalParameters", "formalParameterList", 
		"formalParameter", "literal", "integerLiteral", "floatLiteral", "ashLiteral", 
		"elementValuePairs", "elementValuePair", "elementValue", "elementValueArrayInitializer", 
		"defaultValue", "block", "blockStatement", "variableDeclaration", "statement", 
		"catchClause", "catchType", "finallyBlock", "switchBlockStatementGroup", 
		"switchLabel", "forControl", "forInit", "enhancedForControl", "foreach", 
		"parExpression", "expressionList", "methodCall", "expression", "primary", 
		"typeList", "typeType", "primitiveType", "mapType", "mapTypeKeys", "ashType", 
		"arguments",
	];

	private static readonly _LITERAL_NAMES: Array<string | undefined> = [
		undefined, "'boolean'", "'break'", "'case'", "'catch'", "'const'", "'contains'", 
		"'continue'", "'default'", "'do'", "'double'", "'else'", "'finally'", 
		"'float'", "'for'", "'foreach'", "'if'", "'import'", "'in'", "'int'", 
		"'notify'", "'return'", "'script'", "'since'", "'static'", "'string'", 
		"'switch'", "'throw'", "'try'", "'void'", "'while'", undefined, undefined, 
		undefined, undefined, undefined, undefined, undefined, undefined, "'null'", 
		undefined, undefined, undefined, undefined, undefined, undefined, undefined, 
		undefined, undefined, undefined, undefined, undefined, undefined, undefined, 
		undefined, undefined, undefined, undefined, undefined, undefined, undefined, 
		undefined, undefined, undefined, undefined, undefined, undefined, undefined, 
		undefined, "'bounty'", "'buffer'", "'class'", "'coinmaster'", "'effect'", 
		"'element'", "'familiar'", "'item'", "'location'", "'matcher'", "'monster'", 
		"'phylum'", "'servant'", "'skill'", "'slot'", "'stat'", "'thrall'", "'('", 
		"')'", "'{'", "'}'", "'['", "']'", "';'", "','", "'.'", "'='", "'>'", 
		"'<'", "'!'", "'~'", "'?'", "':'", "'=='", "'<='", "'>='", "'!='", "'&&'", 
		"'||'", "'++'", "'--'", "'+'", "'-'", "'*'", "'/'", "'&'", "'|'", "'^'", 
		"'%'", "'+='", "'-='", "'*='", "'/='", "'&='", "'|='", "'^='", "'%='", 
		"'<<='", "'>>='", "'>>>='",
	];
	private static readonly _SYMBOLIC_NAMES: Array<string | undefined> = [
		undefined, "BOOLEAN", "BREAK", "CASE", "CATCH", "CONST", "CONTAINS", "CONTINUE", 
		"DEFAULT", "DO", "DOUBLE", "ELSE", "FINALLY", "FLOAT", "FOR", "FOREACH", 
		"IF", "IMPORT", "IN", "INT", "NOTIFY", "RETURN", "SCRIPT", "SINCE", "STATIC", 
		"STRING", "SWITCH", "THROW", "TRY", "VOID", "WHILE", "DECIMAL_LITERAL", 
		"HEX_LITERAL", "OCT_LITERAL", "BINARY_LITERAL", "FLOAT_LITERAL", "HEX_FLOAT_LITERAL", 
		"BOOL_LITERAL", "STRING_LITERAL", "NULL_LITERAL", "ASH_BOOLEANS_LITERAL", 
		"ASH_BOUNTY_LITERAL", "ASH_CLASS_LITERAL", "ASH_CLASSES_LITERAL", "ASH_COINMASTER_LITERAL", 
		"ASH_EFFECT_LITERAL", "ASH_EFFECTS_LITERAL", "ASH_ELEMENT_LITERAL", "ASH_ELEMENTS_LITERAL", 
		"ASH_FAMILIAR_LITERAL", "ASH_FAMILIARS_LITERAL", "ASH_FLOATS_LITERAL", 
		"ASH_INTS_LITERAL", "ASH_ITEM_LITERAL", "ASH_ITEMS_LITERAL", "ASH_LOCATION_LITERAL", 
		"ASH_LOCATIONS_LITERAL", "ASH_MONSTER_LITERAL", "ASH_MONSTERS_LITERAL", 
		"ASH_PHYLUM_LITERAL", "ASH_SERVANT_LITERAL", "ASH_SKILL_LITERAL", "ASH_SKILLS_LITERAL", 
		"ASH_SLOT_LITERAL", "ASH_SLOTS_LITERAL", "ASH_STAT_LITERAL", "ASH_STATS_LITERAL", 
		"ASH_STRINGS_LITERAL", "ASH_THRALL_LITERAL", "ASH_BOUNTY_TYPE", "ASH_BUFFER_TYPE", 
		"ASH_CLASS_TYPE", "ASH_COINMASTER_TYPE", "ASH_EFFECT_TYPE", "ASH_ELEMENT_TYPE", 
		"ASH_FAMILIAR_TYPE", "ASH_ITEM_TYPE", "ASH_LOCATION_TYPE", "ASH_MATCHER_TYPE", 
		"ASH_MONSTER_TYPE", "ASH_PHYLUM_TYPE", "ASH_SERVANT_TYPE", "ASH_SKILL_TYPE", 
		"ASH_SLOT_TYPE", "ASH_STAT_TYPE", "ASH_THRALL_TYPE", "LPAREN", "RPAREN", 
		"LBRACE", "RBRACE", "LBRACK", "RBRACK", "SEMI", "COMMA", "DOT", "ASSIGN", 
		"GT", "LT", "BANG", "TILDE", "QUESTION", "COLON", "EQUAL", "LE", "GE", 
		"NOTEQUAL", "AND", "OR", "INC", "DEC", "ADD", "SUB", "MUL", "DIV", "BITAND", 
		"BITOR", "CARET", "MOD", "ADD_ASSIGN", "SUB_ASSIGN", "MUL_ASSIGN", "DIV_ASSIGN", 
		"AND_ASSIGN", "OR_ASSIGN", "XOR_ASSIGN", "MOD_ASSIGN", "LSHIFT_ASSIGN", 
		"RSHIFT_ASSIGN", "URSHIFT_ASSIGN", "WS", "COMMENT", "LINE_COMMENT_SLASH", 
		"LINE_COMMENT_POUND", "IDENTIFIER",
	];
	public static readonly VOCABULARY: Vocabulary = new VocabularyImpl(AshParser._LITERAL_NAMES, AshParser._SYMBOLIC_NAMES, []);

	// @Override
	// @NotNull
	public get vocabulary(): Vocabulary {
		return AshParser.VOCABULARY;
	}
	// tslint:enable:no-trailing-whitespace

	// @Override
	public get grammarFileName(): string { return "AshParser.g4"; }

	// @Override
	public get ruleNames(): string[] { return AshParser.ruleNames; }

	// @Override
	public get serializedATN(): string { return AshParser._serializedATN; }

	constructor(input: TokenStream) {
		super(input);
		this._interp = new ParserATNSimulator(AshParser._ATN, this);
	}
	// @RuleVersion(0)
	public compilationUnit(): CompilationUnitContext {
		let _localctx: CompilationUnitContext = new CompilationUnitContext(this._ctx, this.state);
		this.enterRule(_localctx, 0, AshParser.RULE_compilationUnit);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 106;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			while ((((_la) & ~0x1F) === 0 && ((1 << _la) & ((1 << AshParser.BOOLEAN) | (1 << AshParser.FLOAT) | (1 << AshParser.IMPORT) | (1 << AshParser.INT) | (1 << AshParser.NOTIFY) | (1 << AshParser.SCRIPT) | (1 << AshParser.SINCE) | (1 << AshParser.STRING) | (1 << AshParser.VOID))) !== 0) || ((((_la - 69)) & ~0x1F) === 0 && ((1 << (_la - 69)) & ((1 << (AshParser.ASH_BOUNTY_TYPE - 69)) | (1 << (AshParser.ASH_BUFFER_TYPE - 69)) | (1 << (AshParser.ASH_CLASS_TYPE - 69)) | (1 << (AshParser.ASH_COINMASTER_TYPE - 69)) | (1 << (AshParser.ASH_EFFECT_TYPE - 69)) | (1 << (AshParser.ASH_ELEMENT_TYPE - 69)) | (1 << (AshParser.ASH_FAMILIAR_TYPE - 69)) | (1 << (AshParser.ASH_ITEM_TYPE - 69)) | (1 << (AshParser.ASH_LOCATION_TYPE - 69)) | (1 << (AshParser.ASH_MATCHER_TYPE - 69)) | (1 << (AshParser.ASH_MONSTER_TYPE - 69)) | (1 << (AshParser.ASH_PHYLUM_TYPE - 69)) | (1 << (AshParser.ASH_SERVANT_TYPE - 69)) | (1 << (AshParser.ASH_SKILL_TYPE - 69)) | (1 << (AshParser.ASH_SLOT_TYPE - 69)) | (1 << (AshParser.ASH_STAT_TYPE - 69)) | (1 << (AshParser.ASH_THRALL_TYPE - 69)))) !== 0) || _la === AshParser.IDENTIFIER) {
				{
				this.state = 104;
				this._errHandler.sync(this);
				switch (this._input.LA(1)) {
				case AshParser.IMPORT:
				case AshParser.NOTIFY:
				case AshParser.SCRIPT:
				case AshParser.SINCE:
					{
					this.state = 102;
					this.miscAshDeclarations();
					}
					break;
				case AshParser.BOOLEAN:
				case AshParser.FLOAT:
				case AshParser.INT:
				case AshParser.STRING:
				case AshParser.VOID:
				case AshParser.ASH_BOUNTY_TYPE:
				case AshParser.ASH_BUFFER_TYPE:
				case AshParser.ASH_CLASS_TYPE:
				case AshParser.ASH_COINMASTER_TYPE:
				case AshParser.ASH_EFFECT_TYPE:
				case AshParser.ASH_ELEMENT_TYPE:
				case AshParser.ASH_FAMILIAR_TYPE:
				case AshParser.ASH_ITEM_TYPE:
				case AshParser.ASH_LOCATION_TYPE:
				case AshParser.ASH_MATCHER_TYPE:
				case AshParser.ASH_MONSTER_TYPE:
				case AshParser.ASH_PHYLUM_TYPE:
				case AshParser.ASH_SERVANT_TYPE:
				case AshParser.ASH_SKILL_TYPE:
				case AshParser.ASH_SLOT_TYPE:
				case AshParser.ASH_STAT_TYPE:
				case AshParser.ASH_THRALL_TYPE:
				case AshParser.IDENTIFIER:
					{
					this.state = 103;
					this.functionDeclaration();
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				this.state = 108;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			}
			this.state = 109;
			this.match(AshParser.EOF);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public miscAshDeclarations(): MiscAshDeclarationsContext {
		let _localctx: MiscAshDeclarationsContext = new MiscAshDeclarationsContext(this._ctx, this.state);
		this.enterRule(_localctx, 2, AshParser.RULE_miscAshDeclarations);
		try {
			this.state = 115;
			this._errHandler.sync(this);
			switch (this._input.LA(1)) {
			case AshParser.IMPORT:
				this.enterOuterAlt(_localctx, 1);
				{
				this.state = 111;
				this.importDeclaration();
				}
				break;
			case AshParser.NOTIFY:
				this.enterOuterAlt(_localctx, 2);
				{
				this.state = 112;
				this.notifyDeclaration();
				}
				break;
			case AshParser.SCRIPT:
				this.enterOuterAlt(_localctx, 3);
				{
				this.state = 113;
				this.scriptDeclaration();
				}
				break;
			case AshParser.SINCE:
				this.enterOuterAlt(_localctx, 4);
				{
				this.state = 114;
				this.sinceDeclaration();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public importDeclaration(): ImportDeclarationContext {
		let _localctx: ImportDeclarationContext = new ImportDeclarationContext(this._ctx, this.state);
		this.enterRule(_localctx, 4, AshParser.RULE_importDeclaration);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 117;
			this.match(AshParser.IMPORT);
			this.state = 126;
			this._errHandler.sync(this);
			switch (this._input.LA(1)) {
			case AshParser.STRING_LITERAL:
				{
				this.state = 118;
				this.match(AshParser.STRING_LITERAL);
				}
				break;
			case AshParser.LT:
				{
				this.state = 119;
				this.match(AshParser.LT);
				this.state = 121;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
				do {
					{
					{
					this.state = 120;
					_la = this._input.LA(1);
					if (!(_la === AshParser.DOT || _la === AshParser.DIV || _la === AshParser.IDENTIFIER)) {
					this._errHandler.recoverInline(this);
					} else {
						if (this._input.LA(1) === Token.EOF) {
							this.matchedEOF = true;
						}

						this._errHandler.reportMatch(this);
						this.consume();
					}
					}
					}
					this.state = 123;
					this._errHandler.sync(this);
					_la = this._input.LA(1);
				} while (_la === AshParser.DOT || _la === AshParser.DIV || _la === AshParser.IDENTIFIER);
				this.state = 125;
				this.match(AshParser.GT);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			this.state = 129;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			if (_la === AshParser.SEMI) {
				{
				this.state = 128;
				this.match(AshParser.SEMI);
				}
			}

			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public notifyDeclaration(): NotifyDeclarationContext {
		let _localctx: NotifyDeclarationContext = new NotifyDeclarationContext(this._ctx, this.state);
		this.enterRule(_localctx, 6, AshParser.RULE_notifyDeclaration);
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 131;
			this.match(AshParser.NOTIFY);
			this.state = 132;
			this.match(AshParser.IDENTIFIER);
			this.state = 133;
			this.match(AshParser.SEMI);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public scriptDeclaration(): ScriptDeclarationContext {
		let _localctx: ScriptDeclarationContext = new ScriptDeclarationContext(this._ctx, this.state);
		this.enterRule(_localctx, 8, AshParser.RULE_scriptDeclaration);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 135;
			this.match(AshParser.SCRIPT);
			this.state = 136;
			this.match(AshParser.STRING_LITERAL);
			this.state = 138;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			if (_la === AshParser.SEMI) {
				{
				this.state = 137;
				this.match(AshParser.SEMI);
				}
			}
